[metadata]
name = tunafish
description = Tunafish
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9

[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	ravel
	appyratus
	pytest
	ipdb

