[metadata]
name = tunafish
description = Tunafish
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
keywords = 
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/tunafish.git
	
classifiers = 
	Programming Language :: Python :: 3.9

[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	ravel
	appyratus
	pytest
	ipdb

